Improve popup rendering

--- a/src/html/popup.html
+++ b/src/html/popup.html
@@ -13,10 +13,10 @@
 	</div>
 
 	<div class="group optsCurrent">
-		<div class="menuOption" id="tempWhitelist">
+		<div class="menuOption hidden" id="tempWhitelist">
 			<i class="fa fa-pause"></i> <span class="optionText">Don't discard for now</span>
 		</div>
-		<div class="menuOption" id="whitelist">
+		<div class="menuOption hidden" id="whitelist">
 			<i class="fa fa-ban"></i> <span class="optionText">Never discard this site</span>
 		</div>
 	</div>
@@ -30,7 +30,7 @@
 		</div>
 	</div>
 
-	<div class="group optsSelected" id="discardSelectedGroup">
+	<div class="group optsSelected hidden" id="discardSelectedGroup">
 		<div class="menuOption" id="discardSelected">
 			<i class="fa fa-stop"></i> <span class="optionText">Discard selected tabs</span>
 		</div>
