Reimplement discard current tab

--- a/src/html/popup.html
+++ b/src/html/popup.html
@@ -13,6 +13,9 @@
 	</div>
 
 	<div class="group optsCurrent">
+    <div class="menuOption" id="discardOne">
+      <i class="fa fa-stop"></i> <span class="optionText">Discard this tab</span>
+    </div>
 		<div class="menuOption hidden" id="tempWhitelist">
 			<i class="fa fa-pause"></i> <span class="optionText">Don't discard for now</span>
 		</div>
